--- a/src/.travis.yml
+++ b/src/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
- - “8”
+ - 7
 cache:
  directories:
    - node_modules
 script:
- - npm build
+ - npm run build
  - npm test
 deploy:
  provider: pages
