tests done for all existing functions

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "indent": ["error", 4],
         "react/jsx-indent": [2, 4],
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "arrow-body-style": ["error", "always"]
     },
     "parser": "babel-eslint"
 }
