--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ cache:
    - node_modules
 script:
  - npm run build
- - npm test
+ - npm test -- --coverage && cat ./coverage/lcov.info | coveralls
 notifications:
   email: false
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  local-dir: build
+  on:
+    branch: master
