--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-babel": "^4.1.2",
