--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,13 @@
 {
     "extends": "airbnb",
+    "plugins": [
+        "cypress"
+    ],
     "env": {
         "jest": true,
         "browser": true,
-        "es6": true
+        "es6": true,
+        "cypress/globals": true
     },
     "rules" : {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
