--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,9 @@
         "indent": ["error", 4],
         "react/jsx-indent": [2, 4],
         "react/prop-types": 0,
-        "arrow-body-style": ["error", "always"]
+        "arrow-body-style": ["error", "always"],
+        "prefer-destructuring": ["error", {"object": false, "array": false}],
+        "prefer-template": "error"
     },
     "parser": "babel-eslint"
 }
